--- a/Learning_Python/001_Data_Manipulation_With_Pandas/002_Aggregating_Data.ipynb
+++ b/Learning_Python/001_Data_Manipulation_With_Pandas/002_Aggregating_Data.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Summary statistics "
+    "# 1. Summary statistics "
    ]
   },
   {
@@ -25,12 +25,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The `.agg()` method"
+    "## 1.1 The `.agg()` method"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Cumulative sum"
+    "## 1.2 Cumulative sum"
    ]
   },
   {
@@ -56,7 +56,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Cumulative statistics "
+    "## 1.3 Cumulative statistics "
    ]
   },
   {
@@ -72,7 +72,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exercises"
+    "# Exercises - part 1"
    ]
   },
   {
@@ -646,7 +646,315 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Counting"
+    "# 5. Counting"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Summarizing categorical variable.\n",
+    "- We can use `.drop_duplicates(subset=\"variable_name\")` to remove duplicate names in our data set. \n",
+    "- Sometimes we have the same \"name\"for example and can remove different entrances. So, we can subset our data set considering two variables or more variables."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercises - Part 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Dropping duplicates\n",
+    "Removing duplicates is an essential skill to get accurate counts because often, you don't want to count the same thing multiple times. In this exercise, you'll create some new DataFrames using unique values from sales.\n",
+    "\n",
+    "sales is available and pandas is imported as pd."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Remove rows of sales with duplicate pairs of store and type and save as store_types and print the head.\n",
+    "- Remove rows of sales with duplicate pairs of store and department and save as store_depts and print the head.\n",
+    "- Subset the rows that are holiday weeks using the is_holiday column, and drop the duplicate dates, saving as holiday_dates.\n",
+    "- Select the date column of holiday_dates, and print."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd \n",
+    "sales = pd.read_csv(\"sales_subset.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 10774 entries, 0 to 10773\n",
+      "Data columns (total 10 columns):\n",
+      " #   Column                Non-Null Count  Dtype  \n",
+      "---  ------                --------------  -----  \n",
+      " 0   Unnamed: 0            10774 non-null  int64  \n",
+      " 1   store                 10774 non-null  int64  \n",
+      " 2   type                  10774 non-null  object \n",
+      " 3   department            10774 non-null  int64  \n",
+      " 4   date                  10774 non-null  object \n",
+      " 5   weekly_sales          10774 non-null  float64\n",
+      " 6   is_holiday            10774 non-null  bool   \n",
+      " 7   temperature_c         10774 non-null  float64\n",
+      " 8   fuel_price_usd_per_l  10774 non-null  float64\n",
+      " 9   unemployment          10774 non-null  float64\n",
+      "dtypes: bool(1), float64(4), int64(3), object(2)\n",
+      "memory usage: 768.2+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "sales.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      Unnamed: 0  store type  department        date  weekly_sales  \\\n",
+      "0              0      1    A           1  2010-02-05      24924.50   \n",
+      "901          901      2    A           1  2010-02-05      35034.06   \n",
+      "1798        1798      4    A           1  2010-02-05      38724.42   \n",
+      "2699        2699      6    A           1  2010-02-05      25619.00   \n",
+      "3593        3593     10    B           1  2010-02-05      40212.84   \n",
+      "\n",
+      "      is_holiday  temperature_c  fuel_price_usd_per_l  unemployment  \n",
+      "0          False       5.727778              0.679451         8.106  \n",
+      "901        False       4.550000              0.679451         8.324  \n",
+      "1798       False       6.533333              0.686319         8.623  \n",
+      "2699       False       4.683333              0.679451         7.259  \n",
+      "3593       False      12.411111              0.782478         9.765  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Drop duplicate store/type combinations\n",
+    "store_types = sales.drop_duplicates(subset = [\"store\", \"type\"])\n",
+    "print(store_types.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    Unnamed: 0  store type  department        date  weekly_sales  is_holiday  \\\n",
+      "0            0      1    A           1  2010-02-05      24924.50       False   \n",
+      "12          12      1    A           2  2010-02-05      50605.27       False   \n",
+      "24          24      1    A           3  2010-02-05      13740.12       False   \n",
+      "36          36      1    A           4  2010-02-05      39954.04       False   \n",
+      "48          48      1    A           5  2010-02-05      32229.38       False   \n",
+      "\n",
+      "    temperature_c  fuel_price_usd_per_l  unemployment  \n",
+      "0        5.727778              0.679451         8.106  \n",
+      "12       5.727778              0.679451         8.106  \n",
+      "24       5.727778              0.679451         8.106  \n",
+      "36       5.727778              0.679451         8.106  \n",
+      "48       5.727778              0.679451         8.106  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Drop duplicate store/department combinations\n",
+    "store_depts = sales.drop_duplicates(subset = [\"store\", \"department\"])\n",
+    "print(store_depts.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      Unnamed: 0  store type  department        date  weekly_sales  \\\n",
+      "498          498      1    A          45  2010-09-10         11.47   \n",
+      "691          691      1    A          77  2011-11-25       1431.00   \n",
+      "2315        2315      4    A          47  2010-02-12        498.00   \n",
+      "6735        6735     19    A          39  2012-09-07         13.41   \n",
+      "6810        6810     19    A          47  2010-12-31       -449.00   \n",
+      "6815        6815     19    A          47  2012-02-10         15.00   \n",
+      "6820        6820     19    A          48  2011-09-09        197.00   \n",
+      "\n",
+      "      is_holiday  temperature_c  fuel_price_usd_per_l  unemployment  \n",
+      "498         True      25.938889              0.677602         7.787  \n",
+      "691         True      15.633333              0.854861         7.866  \n",
+      "2315        True      -1.755556              0.679715         8.623  \n",
+      "6735        True      22.333333              1.076766         8.193  \n",
+      "6810        True      -1.861111              0.881278         8.067  \n",
+      "6815        True       0.338889              1.010723         7.943  \n",
+      "6820        True      20.155556              1.038197         7.806  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Subset the rows where is_holiday is True and drop duplicate dates\n",
+    "holiday_dates = sales[sales[\"is_holiday\"]].drop_duplicates(subset=\"date\")\n",
+    "\n",
+    "# Print date col of holiday_dates\n",
+    "print(holiday_dates)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Counting categorical variables\n",
+    "Counting is a great way to get an overview of your data and to spot curiosities that you might not notice otherwise. In this exercise, you'll count the number of each type of store and the number of each department number using the DataFrames you created in the previous exercise:\n",
+    "\n",
+    "`# Drop duplicate store/type combinations`\n",
+    "`store_types = sales.drop_duplicates(subset=[\"store\", \"type\"])`\n",
+    "\n",
+    "`# Drop duplicate store/department combinations`\n",
+    "`store_depts = sales.drop_duplicates(subset=[\"store\", \"department\"])`\n",
+    "\n",
+    "The `store_types` and `store_depts` DataFrames you created in the last exercise are available, and pandas is imported as pd.\n",
+    "\n",
+    "- Count the number of stores of each store type in store_types.\n",
+    "- Count the proportion of stores of each store type in store_types.\n",
+    "- Count the number of different departments in store_depts, sorting the counts in descending order.\n",
+    "- Count the proportion of different departments in store_depts, sorting the proportions in descending order."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A    11\n",
+      "B     1\n",
+      "Name: type, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Count the number of stores of each type\n",
+    "store_counts = store_types[\"type\"].value_counts()\n",
+    "print(store_counts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A    0.916667\n",
+      "B    0.083333\n",
+      "Name: type, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get the proportion of stores of each type\n",
+    "store_props = store_types[\"type\"].value_counts(normalize=True)\n",
+    "print(store_props)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "41    12\n",
+      "30    12\n",
+      "23    12\n",
+      "24    12\n",
+      "25    12\n",
+      "      ..\n",
+      "37    10\n",
+      "48     8\n",
+      "50     6\n",
+      "39     4\n",
+      "43     2\n",
+      "Name: department, Length: 80, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Count the number of each department number and sort\n",
+    "dept_counts_sorted = store_depts[\"department\"].value_counts(sort=True)\n",
+    "print(dept_counts_sorted)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "41    0.012917\n",
+      "30    0.012917\n",
+      "23    0.012917\n",
+      "24    0.012917\n",
+      "25    0.012917\n",
+      "        ...   \n",
+      "37    0.010764\n",
+      "48    0.008611\n",
+      "50    0.006459\n",
+      "39    0.004306\n",
+      "43    0.002153\n",
+      "Name: department, Length: 80, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get the proportion of departments of each number and sort\n",
+    "dept_props_sorted = store_depts[\"department\"].value_counts(sort=True, normalize=True)\n",
+    "print(dept_props_sorted)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 6. Grouped summary statistics"
    ]
   },
   {
