--- a/R_Scripts_and_Projects/Joining Data With Dplyr_Course_DC/004_Chapter4_StackOverflow_questions.Rmd
+++ b/R_Scripts_and_Projects/Joining Data With Dplyr_Course_DC/004_Chapter4_StackOverflow_questions.Rmd
@@ -14,26 +14,255 @@ output:
         smooth_scroll: no
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+# The joinning verbs
+
+-   Inner join
+
+-   Left join
+
+-   Right join
+
+-   Full join
+
+-   Semi join
+
+-   Anti join
+
+![](join_verbs.png)
+
+## The questions table
+
+```{r, include=FALSE}
+library(readr)
+questions <- read_csv("questions.csv", col_types = cols(creation_date = col_date(format = "%Y-%m-%d")))
+question_tags <- read_csv("question_tags.csv")
+tags <- read_csv("tags.csv")
+answers <- read_csv("answers.csv", col_types = cols(creation_date = col_date(format = "%Y-%m-%d")))
+
 ```
 
-## R Markdown
-
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
+```{r}
+library(tidyverse)
 ```
 
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
+```{r}
+head(questions)
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+```{r}
+head(question_tags)
+```
+
+```{r}
+head(tags)
+```
+
+## Joining data
+
+```{r}
+questions_with_tags <- questions %>% 
+  inner_join(question_tags, by = c("id" = "question_id")) %>% 
+  inner_join(tags, by = c("tag_id" = "id"))
+questions_with_tags
+```
+
+## Most common tags
+
+```{r}
+questions_with_tags %>% 
+  count(tag_name, sort = TRUE)
+```
+
+## Exercises
+
+### **Left-joining questions and tags**
+
+Three of the Stack Overflow survey datasets are `questions`, `question_tags`, and `tags`:
+
+-   `questions`: an ID and the score, or how many times the question has been upvoted; the data only includes R-based questions
+
+-   `question_tags`: a tag ID for each question and the question's id
+
+-   `tags`: a tag id and the tag's name, which can be used to identify the subject of each question, such as ggplot2 or dplyr
+
+In this exercise, we'll be stitching together these datasets and replacing NAs in important fields.
+
+Note that we'll be using `left_join`s in this exercise to ensure we keep all questions, even those without a corresponding tag. However, since we know the `questions` data is all R data, we'll want to manually tag these as R questions with `replace_na`.
+
+-   Join together `questions` and `question_tags` using the `id` and `question_id` columns, respectively.
+
+```{r}
+# Join the questions and question_tags tables
+questions_with_tags <- questions %>%
+    left_join(question_tags, by = c("id" = "question_id"))
+```
+
+-   Use another join to add in the `tags` table.
+
+```{r}
+# Join in the tags table
+questions_with_tags <- questions %>%
+	left_join(question_tags, by = c("id" = "question_id")) %>%
+	left_join(tags, by = c("tag_id" = "id"))
+```
+
+-   Use `replace_na` to change the `NA`s in the `tag_name` column to `"only-r"`.
+
+```{r}
+# Replace the NAs in the tag_name column
+questions_with_tags <- questions %>%
+  left_join(question_tags, by = c("id" = "question_id")) %>%
+  left_join(tags, by = c("tag_id" = "id")) %>%
+  replace_na(list(tag_name = "only-r"))
+```
+
+### **Comparing scores across tags**
+
+The complete dataset you created in the last exercise is available to you as `questions_with_tags`. Let's do a quick bit of analysis on it! You'll use familiar dplyr verbs like `group_by`, `summarize`, `arrange`, and `n` to find out the average score of the most asked questions.
+
+-   Aggregate by the `tag_name`.
+
+-   Summarize to get the total number of questions, `num_questions`, as well as the mean score for each question, `score`.
+
+-   Arrange `num_questions` in descending order to sort the answers by the most asked questions.
+
+```{r}
+questions_with_tags %>%
+	# Group by tag_name
+	group_by(tag_name) %>%
+	# Get mean score and num_questions
+	summarize(score = mean(score),
+          	  num_questions = n()) %>%
+	# Sort num_questions in descending order
+	arrange(desc(num_questions))
+```
+
+### **What tags never appear on R questions?**
+
+The `tags` table includes all Stack Overflow tags, but some have nothing to do with `R`. How could you filter for just the tags that never appear on an R question? The `tags` and `question_tags` tables have been preloaded for you.
+
+-   Use a join to determine which tags never appear on an R question.
+
+```{r}
+# Using a join, filter for tags that are never on an R question
+tags %>%
+  anti_join(question_tags, 
+            by = c("id" = "tag_id"))
+```
+
+# Joining questions and answers
+
+## The answers table
+
+```{r}
+head(answers)
+```
+
+```{r}
+questions %>% 
+  inner_join(answers, by = c("id" = "question_id"))
+```
+
+## Exercises
+
+### **Finding gaps between questions and answers**
+
+Now we'll join together `questions` with `answers` so we can measure the time between questions and answers.
+
+Make sure to explore the tables and columns in the console before starting the exercise. Can you tell how are questions identified in the `questions` table? How can you identify which answer corresponds to which question using the `answers` table?
+
+-   Use an inner join to combine the `questions` and `answers` tables using the suffixes `"_question"` and `"_answer"`, respectively.
+
+-   Subtract `creation_date_question` from `creation_date_answer` within the `as.integer()` function to create the `gap` column.
+
+***If your exercise is timing out, you are likely using the wrong columns for joining, causing the result to be too big! Check the join fields carefully!***
+
+-   In the `questions` table, the questions are identified by the `id` column, and by the `question_id` in the `answers` table.
+
+```{r}
+questions %>%
+	# Inner join questions and answers with proper suffixes
+	inner_join(answers, by = c("id" = "question_id"), suffix = c("_question", "_answer")) %>% 
+	# Subtract creation_date_question from creation_date_answer to create gap
+	mutate(gap = as.integer(creation_date_answer - creation_date_question))
+```
+
+### **Joining question and answer counts**
+
+We can also determine how many questions actually yield answers. If we count the number of answers for each question, we can then join the answers counts with the `questions` table.
+
+-   Count and sort the `question_id` column in the `answers` table to create the `answer_counts` table.
+
+-   Join the `questions` table with the `answer_counts` table.
+
+-   Replace the NA values in the `n` column with 0s.
+
+```{r}
+# Count and sort the question id column in the answers table
+answer_counts <- answers %>%
+	group_by(question_id) %>%
+	summarize(n = n())
+
+
+
+# Combine the answer_counts and questions tables
+questions %>% 
+	left_join(answer_counts, by = c("id" = "question_id")) %>%
+	# Replace the NAs in the n column
+	replace_na(list(n = 0))
+```
+
+### Joining questions, answers, and tags
+
+Let's build on the last exercise by adding the tags table to our previous joins. This will allow us to do a better job of identifying which R topics get the most traction on Stack Overflow. The tables you created in the last exercise have been preloaded for you as answer_counts and question_answer_counts.
+
+```{r}
+answer_counts <- answers %>% count(question_id, sort = TRUE)
+
+question_answer_counts <- questions %>% left_join(answer_counts, by = c("id" = "question_id")) %>% replace_na(list(n = 0))
+```
+
+Combine the question_tags table with question_answer_counts using an inner_join. Now, use another inner_join to add the tags table.
+
+```{r}
+question_answer_counts %>%
+	# Join the question_tags tables
+	inner_join(question_tags, by = c("id" = "question_id")) %>% 
+	# Join the tags table
+  inner_join(tags, by = c("tag_id" = "id"))
+```
+
+### Average answers by question
+
+The table you created in the last exercise has been preloaded for you as `tagged_answers`. You can use this table to determine, on average, how many answers each questions gets.
+
+```{r}
+tagged_answers <- question_answer_counts %>%
+    inner_join(question_tags, by = c("id" = "question_id")) %>%
+    inner_join(tags, by = c("tag_id" = "id"))
+```
+
+Some of the important variables from this table include: `n`, the number of answers for each question, and `tag_name`, the name of each tag associated with each question.
+
+Let's use some of our favorite dplyr verbs to find out how many answers each question gets on average.
+
+-   Aggregate the `tagged_answers` table by `tag_name`.
+
+-   Summarize `tagged_answers` to get the count of `questions` and the `average_answers`.
+
+-   Sort the resulting `questions` column in descending order.
+
+```{r}
+tagged_answers %>%
+	# Aggregate by tag_name
+  group_by(tag_name) %>%   
+	# Summarize questions and average_answers
+    summarize(questions = n(),
+              average_answers = mean(n)) %>%
+	# Sort the questions in descending order
+  arrange(desc(questions))
+```
+
+# **The bind_rows verb**
+
+\
