--- a/R/001_Introduction_to_Statistics_in_R/002_random_numbers_and_probability.Rmd
+++ b/R/001_Introduction_to_Statistics_in_R/002_random_numbers_and_probability.Rmd
@@ -425,3 +425,90 @@ rnorm(10, mean = 161, sd = 7)
 Since each deal Amir worked on (both won and lost) was different, each was worth a different amount of money. These values are stored in the amount column of amir_deals As part of Amir's performance review, you want to be able to estimate the probability of him selling different amounts, but before you can do this, you'll need to determine what kind of distribution the amount variable follows.
 
 Both dplyr and ggplot2 are loaded and amir_deals is available.
+
+```{r}
+library(readr)
+amir_deals <- read_csv("data/amir_deals.csv")
+glimpse(amir_deals)
+amir_deals <- amir_deals[, -1]
+```
+
+- Create a histogram with 10 bins to visualize the distribution of the amount.
+
+```{r}
+amir_deals %>% 
+  ggplot(aes(x = amount)) + 
+  geom_histogram(bins = 10)
+```
+
+Amir`s amount follow, approximately, a normal distribution.
+
+#### Probabilities from the normal distribution
+Since each deal Amir worked on (both won and lost) was different, each was worth a different amount of money. These values are stored in the amount column of amir_deals and follow a normal distribution with a mean of 5000 dollars and a standard deviation of 2000 dollars. As part of his performance metrics, you want to calculate the probability of Amir closing a deal worth various amounts.
+
+- What's the probability of Amir closing a deal worth less than $7500?
+```{r}
+pnorm(7500, mean = 5000, sd = 2000)
+```
+
+There is a 89.43% probability that Amil closes a deal worthing less than or equal to $7500.
+
+- **What's the probability of Amir closing a deal worth more than $1000?**
+```{r}
+pnorm(1000, mean = 5000, sd = 2000, lower.tail = FALSE)
+```
+There is a 97.72% probability that Amil closes a deal worthing more than or equal to $1000.
+
+- **What's the probability of Amir closing a deal worth between `$3000` and `$7000`?**
+
+```{r}
+pnorm(7000, mean = 5000, sd = 2000) - pnorm(3000, mean = 5000, sd = 2000)
+```
+
+There is a 68.27% probability that Amil closes a deal worthing between `$3000` and `$7000`.
+
+- **What amount will 75% of Amir's sales be more than?**
+
+```{r}
+qnorm(.75, mean = 5000, sd = 2000, lower.tail = FALSE)
+```
+
+75% of Amir's amount will be more than `$3651.02`.
+
+#### Simulating sales under new market conditions
+The company's financial analyst is predicting that next quarter, the worth of each sale will increase by 20% and the volatility, or standard deviation, of each sale's worth will increase by 30%. To see what Amir's sales might look like next quarter under these new market conditions, you'll simulate new sales amounts using the normal distribution and store these in the new_sales data frame, which has already been created for you.
+
+
+- Currently, Amir's average sale amount is $5000. Calculate what his new average amount will be if it increases by 20% and store this in `new_mean`.
+
+- Amir's current standard deviation is $2000. Calculate what his new standard deviation will be if it increases by 30% and store this in `new_sd`.
+
+- Add a new column called amount to the data frame `new_sales`, which contains 36 simulated amounts from a normal distribution with a mean of `new_mean` and a standard deviation of  `new_sd`.
+
+- Plot the distribution of the `new_sales` amounts using a histogram with 10 bins.
+
+```{r}
+# Creating the data frame
+sale_num <- seq(1, 36)
+new_sales <- tibble(sale_num = sale_num)
+```
+
+```{r}
+new_mean <- 1.2 * 5000
+new_sd <- 1.3 * 2000
+```
+
+```{r}
+# Simulating amount for new mean and sd
+new_sales <- new_sales %>% 
+  mutate(amount = rnorm(36, mean = new_mean, sd = new_sd))
+```
+
+```{r}
+# Histogram 
+new_sales %>% 
+  ggplot(aes(x = amount)) +
+  geom_histogram(bins = 10)
+```
+
+ 
