--- a/R/001_Introduction_to_Statistics_in_R/002_random_numbers_and_probability.Rmd
+++ b/R/001_Introduction_to_Statistics_in_R/002_random_numbers_and_probability.Rmd
@@ -511,4 +511,16 @@ new_sales %>%
   geom_histogram(bins = 10)
 ```
 
+#### Which market is better?
+The key metric that the company uses to evaluate salespeople is the percent of sales they make over $1000 since the time put into each sale is usually worth a bit more than that, so the higher this metric, the better the salesperson is performing.
+
+Recall that Amir's current sales amounts have a mean of `$5000` and a standard deviation of `$2000`, and Amir's predicted amounts in next quarter's market have a mean of `$6000` and a standard deviation of `$2600`.
+
+Based only on the metric of percent of sales over $1000, does Amir perform better in the current market or the predicted market?
+
+```{r}
+pnorm(1000, 5000, 2000 )
+pnorm(1000, new_mean, new_sd)
+```
+ 
  
